--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@
     --grey2: #aebacf;
     --light-grey: #dee3ec;
     --light: #f5f5f5;
+    --light-low: #f8f8f8;
     --white: #fff;
     --red: #ef5455;
     --green: #7ab97a;
