--- a/src/components/EpPDF/GeneratePDF/Generate.module.css
+++ b/src/components/EpPDF/GeneratePDF/Generate.module.css
@@ -6,7 +6,7 @@
 }
 .Generate {
     width: 100%;
-    min-height: 100vh;
+    min-height: 294mm;
     background: var(--white);
     box-sizing: border-box;
     position: relative;
@@ -48,7 +48,7 @@
     position: absolute;
     left: 100px;
 }
-.OnExamUl li::before{
+.OnExamUl li::before {
     content: '';
     position: absolute;
     z-index: 10;
@@ -58,7 +58,7 @@
     height: 7px;
     border: 1px solid var(--primary);
 }
-.OnExamUl li::after{
+.OnExamUl li::after {
     content: '';
     position: absolute;
     z-index: 5;
@@ -98,7 +98,7 @@
     padding: 0 0;
     margin: 0 50px;
     display: grid;
-    grid-template-columns: minmax(0, 45%) minmax(0, 20%) minmax(0, 15%) minmax(0, 20%);
+    grid-template-columns: minmax(0, 40%) minmax(0, 23%) minmax(0, 12%) minmax(0, 14%) minmax(0, 13%);
     font-size: 12px;
     position: relative;
     border-bottom: 1px solid var(--grey);
@@ -106,6 +106,11 @@
 .patient b {
     font-weight: 500;
 }
+
+.patient p > span {
+    text-transform: capitalize;
+}
+
 .date {
     position: absolute;
     right: 0;
@@ -157,13 +162,12 @@
     font-size: 12px;
     padding-left: 10px;
 }
-.leftBody .diagnosis ol >li:first-child{
+.leftBody .diagnosis ol > li:first-child {
     padding-top: 10px;
 }
-.leftBody .diagnosis ol >li:last-child{
+.leftBody .diagnosis ol > li:last-child {
     padding-bottom: 10px;
 }
-
 
 .rightBody {
     padding-left: 30px;
@@ -186,12 +190,12 @@
     font-size: 12px;
     margin: 5px;
 }
-.singleMedicine p:nth-child(1){
-    font-size:12px;
+.singleMedicine p:nth-child(1) {
+    font-size: 12px;
     font-weight: 500;
 }
-.singleMedicine p:nth-child(2){
-    padding-left:20px;
+.singleMedicine p:nth-child(2) {
+    padding-left: 20px;
 }
 .singleMedicine span {
     font-size: 14px;
@@ -209,21 +213,21 @@
     border-radius: 2px;
 }
 
-.refer{
+.refer {
     font-size: 14px;
-    font-weight:500;
+    font-weight: 500;
     color: var(--primary);
 }
-.refer{
+.refer {
     font-size: 12px;
     color: var(--dark);
     margin: 0;
 }
-.refer > span{
+.refer > span {
     color: var(--primary);
 }
 
-.follow{
+.follow {
     font-size: 12px;
     margin: 0;
 }
@@ -247,7 +251,7 @@
     color: var(--white);
     background: var(--primary);
     position: absolute;
-    bottom: 0;
+    bottom: 1px;
     left: 0;
     width: 100%;
 }
