--- a/src/components/EpPDF/HeaderUpdate.module.css
+++ b/src/components/EpPDF/HeaderUpdate.module.css
@@ -1,4 +1,4 @@
-.wrapper{
+.wrapper {
     position: absolute;
     top: 50px;
     width: 100%;
@@ -6,13 +6,17 @@
     justify-content: center;
 }
 .box {
+    position: relative;
     background: var(--white);
     width: 700px;
     box-shadow: 0 5px 20px var(--grey2);
     border-radius: 5px;
     text-align: center;
 }
-.formWrapper> select, .formWrapper > input, .formWrapper > textarea, .formWrapper > button {
+.formWrapper > select,
+.formWrapper > input,
+.formWrapper > textarea,
+.formWrapper > button {
     width: 70%;
     margin-left: 15%;
     display: block;
@@ -21,10 +25,46 @@
     margin-bottom: 10px;
     border: 2px solid var(--light);
 }
-.formWrapper> select:focus, .formWrapper > input:focus, .formWrapper > textarea:focus, .formWrapper > button:focus{
+.formWrapper > select:focus,
+.formWrapper > input:focus,
+.formWrapper > textarea:focus,
+.formWrapper > button:focus {
     outline: 0;
 }
-.formWrapper > select > option{
+.formWrapper > select > option {
     color: grey;
     padding: 10px;
+}
+
+.formWrapper > button {
+    background-color: var(--primary);
+    color: var(--white);
+    cursor: pointer;
+    margin-bottom: 20px;
+}
+
+.formWrapper > button:hover {
+    opacity: 0.9;
+    transition: 200ms;
+}
+
+.formWrapper > select {
+    cursor: pointer;
+}
+
+.close {
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    transition: all 200ms;
+    font-size: 22px;
+    font-weight: bold;
+    text-decoration: none;
+    color: var(--red);
+    cursor: pointer;
+}
+
+.close:hover {
+    opacity: 0.8;
+    transition: 0.5s;
 }
