--- a/src/components/Patient/Patient.module.css
+++ b/src/components/Patient/Patient.module.css
@@ -43,6 +43,7 @@
     line-height: 20px;
     font-size: 14px;
     cursor: pointer;
+    padding: 1px 1px 2px 2px;
 }
 .Patient > form > span:hover {
     background: var(--red);
@@ -65,7 +66,7 @@
     border: 1px solid var(--primary);
     outline: 0;
 }
-.Wrapper > input:nth-child(1){
+.Wrapper > input:nth-child(1) {
     border: 1px solid var(--primary);
     transform: scale(1.05);
     transition: 300ms;
@@ -79,6 +80,7 @@
     color: var(--white);
     padding: 10px;
     border-radius: 2px;
+    margin-top: 10px;
 }
 .Wrapper > button:focus {
     outline: 0;
@@ -93,7 +95,7 @@
     border-radius: 4px;
     border: 1px solid var(--light);
     background: var(--light);
-    padding: 2px 10px;
+    padding: 7px 10px;
     box-sizing: border-box;
     cursor: pointer;
     margin: 7px 0;
@@ -102,4 +104,21 @@
 .Wrapper select:focus {
     outline: 0;
     border: 1px solid var(--primary);
+}
+
+.clear {
+    position: absolute;
+    top: 9.2em;
+    right: 66px;
+    background-color: var(--red);
+    color: var(--white);
+    padding: 0px 10px 2px;
+    border-radius: 4px;
+    font-size: 14px;
+}
+
+.clear:hover {
+    cursor: pointer;
+    opacity: 0.8;
+    transition: 200ms;
 }
