--- a/src/components/Dashboard/Sidebar/Sidebar.module.css
+++ b/src/components/Dashboard/Sidebar/Sidebar.module.css
@@ -1,6 +1,5 @@
 .Sidebar {
     height: 100vh;
-    border-right: 1px solid var(--light-grey);
 }
 .Sidebar > a > button {
     border: none;
@@ -23,9 +22,12 @@
     transform: scale(1.1);
     background: var(--secondary);
 }
-.epLogo img {
+.epLogo > p {
     display: block;
-    margin: 20px auto;
+    text-align: center;
+    font-size: 22px;
+    font-weight: 600;
+    color: var(--secondary);
 }
 .docImg {
     width: 120px;
@@ -60,6 +62,7 @@
     list-style: none;
     padding: 0;
     overflow: hidden;
+    display: none;
 }
 .nav li {
     font-size: 12px;
