--- a/src/components/InputSection/MedicineInpOut/InputMedicine/InputMedicine.module.css
+++ b/src/components/InputSection/MedicineInpOut/InputMedicine/InputMedicine.module.css
@@ -50,6 +50,7 @@
     grid-template-columns: repeat(5, minmax(0, 20%));
     gap: 10px;
     margin-bottom: 10px;
+    display: none;
 }
 .remark {
     width: 100%;
