--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -4,9 +4,12 @@
     width: 100%;
     display: grid;
     grid-template-columns: minmax(0, 40%) minmax(0, 60%);
+    margin-top: 30px;
+    z-index: 100;
 }
 .alignLeft {
     display: inline-block;
+    visibility: hidden;
 }
 .alignLeft svg {
     color: var(--light-grey);
@@ -112,14 +115,14 @@
     display: flex;
     align-items: center;
     font-size: 12px;
-    color: var(--primary);
+    color: var(--red);
     font-weight: 500;
 }
 
 .cause > span {
     font-size: 13px;
     padding-left: 6px;
-    color: var(--red);
+    color: var(--secondary);
 }
 
 @keyframes pop {
